--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ body {
     margin: auto;
 }
 
+.logo {
+    display: block;
+    text-indent: -9999px;
+    width: 100px;
+    height: 82px;
+    background: url(HauteCoutureLogodeisgn.svg);
+    background-size: 100px 82px;
+}
+
 .container {
     text-align: center;
     max-width: 1000px;
