--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     text-indent: -9999px;
     width: 100px;
     height: 82px;
-    background: url(HauteCoutureLogodeisgn.svg);
+    background: url(PhotographMePortfolio.svg);
     background-size: 100px 82px;
 }
 
@@ -33,7 +33,7 @@ body {
 
 .banner {
     height: 200px;
-    background: url(https://iso.500px.com/wp-content/uploads/2016/03/pedroquintela.jpg) center no-repeat
+    background: url(Siyad.jpg) center no-repeat
 }
 
 .banner-text {}
@@ -135,11 +135,11 @@ section {
 }
 
 .flex:first-of-type div:first-child {
-    background-image: url("aloe-polyphylla-2x.jpg");
+    background-image: url("Moonfade.jpg");
 }
 
 .flex:nth-of-type(2) div:nth-child(1) {
-    background-image: url("wire-worm.jpg");
+    background-image: url("dessert.jpg");
 }
 
 .flex:nth-child(odd) {
@@ -292,6 +292,6 @@ input[type=submit]:hover {
 
 @media screen and (max-width: 400px) {
     .banner {
-        background: url(https://cdn.theatlantic.com/thumbor/wKFYLkQi3_x9-k8IsuqgCPprVRU=/0x0:3233x1819/720x405/media/img/mt/2020/11/GettyImages_1228429358/original.jpg) top center no-repeat
+        background: url(Siyad.jpg) top center no-repeat
     }
 }
